<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editar_perfil_titulo"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/editar_perfil"
            android:textAlignment="center"
            android:textColor="@color/android_green"
            android:textSize="@dimen/textSize_titulo_Edit" />

        <RelativeLayout
            android:layout_width="@dimen/width_linea_titulos"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/android_green" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_editar"
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:theme="@style/CardView"
            card_view:cardBackgroundColor="@color/black"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="7dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="25dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_apellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo"
                        android:inputType="textUri"
                        android:enabled="false"
                        android:textColor="@color/gray"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contrasenia_actual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contasenia_actual"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contrasenia_nueva"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasenia_nueva"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_confirmar_contrasenia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmar_contasenia"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/actualizar_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/android_darkgreen"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/actualizar"
                    android:textColor="@color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>