<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo_ingreso"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/android_green"
        android:textSize="@dimen/textSize_titulo_ingreso" />

    <RelativeLayout
        android:layout_width="@dimen/width_linea_ingreso"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/android_green"
        android:layout_marginBottom="@dimen/marginBottom_linea_ingreso"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_ingreso"
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:theme="@style/CardView"
        card_view:cardBackgroundColor="@color/black"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="25dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ingresar_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/textSize_edit_text_ingreso"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ingresar_contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contasenia"
                    android:inputType="textPassword"
                    android:textSize="@dimen/textSize_edit_text_ingreso"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/ingresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/android_darkgreen"
                    android:padding="10dp"
                    android:text="@string/ingresar"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/marginEnd_Buttons_ingreso"
                    android:textSize="@dimen/textSize_ingresar_button_text"/>

                <Button
                    android:id="@+id/registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/android_darkgreen"
                    android:padding="10dp"
                    android:text="@string/registrarse"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_ingresar_button_text"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>