<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lider"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/android_darkgreen"
        android:text="@string/titulo_lider"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_titulos_Detalle" />

    <RelativeLayout
        android:layout_width="@dimen/width_linea_titulos"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/android_darkgreen" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lider_investigador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mensaje_no_lider"
        android:padding="10dp"
        android:textSize="@dimen/textSize_mensajes_fragmentos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/mensaje_grup_no_lider"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/investigadores"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/android_darkgreen"
                android:text="@string/titulo_integrantes"
                android:textAlignment="center"
                android:textSize="@dimen/textSize_titulos_Detalle" />

            <RelativeLayout
                android:layout_width="@dimen/width_linea_titulos"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/android_darkgreen" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lista_investigadores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mensaje_no_investigadores"
                android:padding="10dp"
                android:textSize="@dimen/textSize_mensajes_fragmentos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/mensaje_grup_no_inv"/>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>